	(#4884).
	* Fixed a spurious warning telling the user to run 'cabal update'
	when it wasn't necessary (#4444).
	* Packages installed in sandboxes via 'add-source' now have
	their timestamps updated correctly and so will not be reinstalled
	unncecessarily if the main install command fails (#1375).
	* Added support for '--enable-tests' and '--enable-benchmarks' to
	'cabal fetch' (#4948).

2.0.0.1 Mikhail Glushenkov <mikhail.glushenkov@gmail.com> December 2017
	* Support for GHC's numeric -g debug levels (#4673).
	* Demoted 'scope' field version check to a warning (#4714).
	* Fixed verbosity flags getting removed before being passed to
	'printPlan' (#4724).
	* Added a '--store-dir' option that can be used to configure the
	location of the build global build store (#4623).
	* Turned `allow-{newer,older}` in `cabal.project` files into an
	accumulating field to match CLI flag semantics (#4679).
	* Improve success message when `cabal upload`ing documentation
	(#4777).
	* Documentation fixes.

2.0.0.0 Mikhail Glushenkov <mikhail.glushenkov@gmail.com> August 2017
	* See http://coldwa.st/e/blog/2017-09-09-Cabal-2-0.html
	for more detailed release notes.
	* Removed the '--root-cmd' parameter of the 'install' command
	(#3356).
	* Deprecated 'cabal install --global' (#3356).
	* Changed 'cabal upload' to upload a package candidate by default
	(#3419). Same applies to uploading documentation.
	* Added a new 'cabal upload' flag '--publish' for publishing a
	package on Hackage instead of uploading a candidate (#3419).
	* Added optional solver output visualisation support via the
	tracetree package. Mainly intended for debugging (#3410).
	* Removed the '--check' option from 'cabal upload'
	(#1823). It was replaced by package candidates.
	* Fixed various behaviour differences between network transports
	(#3429).
	* The bootstrap script now works correctly when run from a Git
	clone (#3439).
	* Removed the top-down solver (#3598).