@@ -45,6 +45,7 @@
 	unncecessarily if the main install command fails (#1375).
 	* Added support for '--enable-tests' and '--enable-benchmarks' to
 	'cabal fetch' (#4948).
+	* Removed support for building cabal-install with GHC < 7.10.
 
 2.0.0.1 Mikhail Glushenkov <mikhail.glushenkov@gmail.com> December 2017
 	* Support for GHC's numeric -g debug levels (#4673).
